; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_process.c_mac_proc_check_ledger.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_process.c_mac_proc_check_ledger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@proc_check_ledger = common dso_local global i32 0, align 4
@mac_proc_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_proc_check_ledger(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @mac_proc_check_enforce(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %24

14:                                               ; preds = %3
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @kauth_cred_proc_ref(i32 %15)
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* @proc_check_ledger, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @MAC_CHECK(i32 %17, i32 %18, i32 %19, i32 %20)
  %22 = call i32 @kauth_cred_unref(i32* %8)
  %23 = load i32, i32* %9, align 4
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %14, %13
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @mac_proc_check_enforce(i32) #1

declare dso_local i32 @kauth_cred_proc_ref(i32) #1

declare dso_local i32 @MAC_CHECK(i32, i32, i32, i32) #1

declare dso_local i32 @kauth_cred_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
